# simple_FPS

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  light.hpp  locations.hpp  model.hpp  primitives.hpp  renderer.hpp  utils.hpp
lib/include/chicken3421/: chicken3421.hpp  error_utils.hpp  file_utils.hpp  gl_utils.hpp  window_utils.hpp
lib/include/glad/: glad.h
lib/lib/cmake/chicken3421/: chicken3421Config.cmake  chicken3421Targets-noconfig.cmake  chicken3421Targets.cmake
lib/lib/cmake/glad/: gladTargets.cmake
lib/lib/cmake/stb/: stbConfig.cmake  stbConfigVersion.cmake  stbTargets-noconfig.cmake  stbTargets.cmake
lib/lib/pkgconfig/: glfw3.pc
res/shaders/: basic_frag.glsl  basic_vert.glsl  light_src_vert.glsl  shader.frag  shader.vert
src/: camera.cpp  locations.cpp  main.cpp  model.cpp  old_code.cpp  primitives.cpp  renderer.cpp  utils.cpp
src/example_proj/: CMakeLists.txt
src/example_proj/src/: main.cpp  old_code.cpp
